@@ -11,6 +11,8 @@ PHP                                                                        NEWS
   (Ilia)
 - Fixed bug #26680 (Added version check in mysqli_report_index) (Georg)
 - Fixed bug #26675 (Segfault on ArrayAccess use). (Marcus)
+- Fixed bug #25038 (call_user_func issues warning if function throws 
+  exception). (Marcus)
 
 21 Dec 2003, PHP 5 Beta 3
 - Bundled new tidy extension (John, Wez)
